--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL_PUBLIC="postgresql://postgres:michael040120000@localhost:5432/match?schema=public"
+DATABASE_URL_PUBLIC="postgresql://user:senha@localhost:5432/match?schema=public"
 
 ORIGIN="http://localhost:4000"
 
